# Adaptive-Diffusion-Terrain

./: LICENSE  README.md  auto_train.py  install.sh  utils.py
assets/elevation/train/: test_map1.txt  test_map10.txt  test_map100.txt  test_map1000.txt  test_map1001.txt  test_map1002.txt  test_map1003.txt  test_map1004.txt  test_map1005.txt  test_map1006.txt  test_map1007.txt  test_map1008.txt  test_map1009.txt  test_map101.txt  test_map1010.txt  test_map1011.txt  test_map1012.txt  test_map1013.txt  test_map1014.txt  test_map1015.txt  test_map1016.txt  test_map1017.txt  test_map1018.txt  test_map1019.txt  test_map102.txt  test_map1020.txt  test_map1021.txt  test_map1022.txt  test_map1023.txt  test_map1024.txt  test_map1025.txt  test_map1026.txt  test_map1027.txt  test_map1028.txt  test_map1029.txt  test_map103.txt  test_map1030.txt  test_map1031.txt  test_map1032.txt  test_map1033.txt  (+2960 more)
assets/husky/: husky.urdf
assets/husky/meshes/: top_plate.stl.convex.stl
assets/jackal/: jackal.urdf
bc_agents/: dataset.py  student_net.py  train_student.py
cfg/: base_config.py  husky_config.py  jackal_config.py
contexts/: offroad_env.py  terrain_context.py  terrain_utils.py
contexts/denoising-diffusion-pytorch/: setup.py  train.py
contexts/denoising-diffusion-pytorch/denoising_diffusion_pytorch/: denoising_diffusion_pytorch.py
contexts/simsense/: CMakeLists.txt  requirements.txt  setup.py
contexts/simsense/include/simsense/: core.h
rl_agents/: actor_critic_net.py  buffer.py  evaluate_teacher.py  play_teacher.py  ppo.py  teacher_net.py  train_teacher.py
